[gd_scene load_steps=14 format=3 uid="uid://rh7bou8nqk33"]

[ext_resource type="Script" uid="uid://bhpqp60gl5khu" path="res://scripts/minesweeper.gd" id="1_uwrxv"]
[ext_resource type="AudioStream" uid="uid://donukwwx0j277" path="res://audio_effects/explosion.mp3" id="2_c3r7o"]
[ext_resource type="Script" uid="uid://6vhg33lpq12h" path="res://scripts/ui.gd" id="2_dxjtj"]
[ext_resource type="Texture2D" uid="uid://0pbahl2extoc" path="res://sprites/minesweeper/UI/flag.png" id="2_tx6nw"]
[ext_resource type="FontFile" uid="uid://ptmgpl8e12t8" path="res://textFonts/DynaPuff-VariableFont_wdth,wght.ttf" id="3_dxjtj"]
[ext_resource type="AudioStream" uid="uid://c7rs50lducl6g" path="res://audio_effects/music/Vibing Over Venus.mp3" id="3_wmvsh"]
[ext_resource type="Texture2D" uid="uid://dqlikfcp57cvc" path="res://sprites/minesweeper/UI/timer.png" id="4_dxjtj"]
[ext_resource type="PackedScene" uid="uid://p3g20ycisgmd" path="res://scenes/end_screen.tscn" id="6_dun80"]

[sub_resource type="Animation" id="Animation_tx6nw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MusicPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MusicPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bw3vb"]
resource_name = "START"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MusicPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MusicPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx6nw"]
_data = {
&"RESET": SubResource("Animation_tx6nw"),
&"START": SubResource("Animation_bw3vb")
}

[sub_resource type="LabelSettings" id="LabelSettings_dun80"]
font = ExtResource("3_dxjtj")
font_size = 169
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_c3r7o"]
font = ExtResource("3_dxjtj")
font_size = 169
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[node name="Board" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_tx6nw")
}

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_c3r7o")
volume_db = -5.0
bus = &"Sfx"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_wmvsh")
bus = &"Music"
parameters/looping = true

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 853.0
offset_bottom = 526.0
mouse_filter = 1
script = ExtResource("2_dxjtj")

[node name="ColorRect" type="ColorRect" parent="UI"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 2.2510002
anchor_bottom = 2.0530002
offset_right = 5.8969727
offset_bottom = 3.1220703
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Labels" type="Control" parent="UI"]
layout_mode = 1
anchor_top = -0.002
anchor_right = 2.2510002
anchor_bottom = 2.0528023
offset_left = 1.0
offset_top = 0.052000046
offset_right = 0.8968506
offset_bottom = -0.77404785
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="FlagLabel" type="Label" parent="UI/Labels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07195834
anchor_top = -0.017740741
anchor_right = 0.12695834
anchor_bottom = 0.17225927
offset_left = -0.16001892
offset_top = 0.16000009
offset_right = 631.24
offset_bottom = -0.040008545
text = "0"
label_settings = SubResource("LabelSettings_dun80")
metadata/_edit_use_anchors_ = true

[node name="TimerLabel" type="Label" parent="UI/Labels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84256256
anchor_top = -0.016666668
anchor_right = 0.9235626
anchor_bottom = 0.17133334
offset_left = -652.7201
offset_top = -2.0
offset_right = 0.7598877
offset_bottom = -0.040008545
text = "0"
label_settings = SubResource("LabelSettings_c3r7o")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="FlagTexture" type="TextureRect" parent="UI/Labels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010645834
anchor_top = 0.021185186
anchor_right = 0.06264584
anchor_bottom = 0.14218518
offset_left = 0.55999947
offset_top = 0.11999893
offset_right = 0.7199936
offset_bottom = 0.44000244
texture = ExtResource("2_tx6nw")
metadata/_edit_use_anchors_ = true

[node name="TimerTexture" type="TextureRect" parent="UI/Labels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.93000007
anchor_top = 0.020000001
anchor_right = 0.989
anchor_bottom = 0.143
offset_left = 0.39990234
offset_top = 0.3999977
offset_right = -0.8800049
offset_bottom = -0.44000244
texture = ExtResource("4_dxjtj")
metadata/_edit_use_anchors_ = true

[node name="End_Screen" parent="UI" instance=ExtResource("6_dun80")]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 2.2510002
anchor_bottom = 2.0530002
offset_left = 2231.0
offset_top = 50.0
offset_right = 2230.897
offset_bottom = 50.12195

[connection signal="game_ended" from="." to="." method="_on_gameEnded"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
